# Tetris

./: CMakeLists.txt  README.md  main.cpp
Dictionary/: Dictionary.h
Tetris/: Tetris.cpp  Tetris.h
TetrisMap/: TetrisMap.h
TetrominoColor/: TetrominoColor.h
TetrominoCor/: TetrominoCor.h
TetrominoWidth/: TetrominoWidth.h
